feat: initial commit

--- a/weather_app/.gitignore
+++ b/weather_app/.gitignore
@@ -14,7 +14,7 @@
 *.ipr
 *.iws
 .idea/
-
+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
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
