--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -47,6 +47,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   http: ^0.13.5
+  intl: ^0.17.0
+  weather_icons: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
