--- a/weather_app/android/app/src/main/AndroidManifest.xml
+++ b/weather_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.weather_app">
+    package="com.open_weather_flutter_app">
    <application
-        android:label="weather_app"
+        android:label="open_weather_example_flutter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
