--- a/weather_app/web/manifest.json
+++ b/weather_app/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "weather_app",
-    "short_name": "weather_app",
+    "name": "open_weather_example_flutter",
+    "short_name": "open_weather_example_flutter",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
